--- a/services/api/templates/console.html
+++ b/services/api/templates/console.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Ad Manager 360{% endblock %}
+{% block title %}Home - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
