--- a/services/api/templates/creative-health-check.html
+++ b/services/api/templates/creative-health-check.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Creative Health Check - Ad Manager 360{% endblock %}
+{% block title %}Creative Health Check - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
