--- a/services/api/templates/inventory.html
+++ b/services/api/templates/inventory.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Inventory - Ad Manager 360{% endblock %}
+{% block title %}Inventory - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
