--- a/services/api/templates/programmatic.html
+++ b/services/api/templates/programmatic.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Programmatic Delivery - Ad Manager 360{% endblock %}
+{% block title %}Programmatic Delivery - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
