--- a/services/api/templates/reporting.html
+++ b/services/api/templates/reporting.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Reporting - Ad Manager 360{% endblock %}
+{% block title %}Reporting - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
