--- a/services/api/templates/audiences.html
+++ b/services/api/templates/audiences.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Audience Management - Ad Manager 360{% endblock %}
+{% block title %}Audience Management - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
