--- a/services/api/templates/creatives.html
+++ b/services/api/templates/creatives.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Creatives - Ad Manager 360{% endblock %}
+{% block title %}Creatives - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
