--- a/services/api/templates/line_items.html
+++ b/services/api/templates/line_items.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Line Items - Ad Manager 360{% endblock %}
+{% block title %}Line Items - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
