--- a/services/api/templates/orders.html
+++ b/services/api/templates/orders.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Orders - Ad Manager 360{% endblock %}
+{% block title %}Orders - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
