--- a/services/api/templates/pacing.html
+++ b/services/api/templates/pacing.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Pacing & Delivery Controls - Ad Manager 360{% endblock %}
+{% block title %}Pacing & Delivery Controls - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
