--- a/services/api/templates/study_hub.html
+++ b/services/api/templates/study_hub.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Study Hub - Ad Manager 360{% endblock %}
+{% block title %}Study Hub - Digital-SSP{% endblock %}
 
 {% block content %}
 <div class="page-header">
